Сверстан главный экран сайта

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Сайт пренадлежит Даринской Анне">
     <meta name="aurhor" content="Анна Даринская">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -21,7 +22,7 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <div class="navbar container">
         <img src="img/logo.svg" alt="logo">
         <nav class="navigation">
             <ul class="nav-list">
@@ -32,13 +33,41 @@
             </ul>
         </nav>
     </div>
+    <!-- /.navbar -->
+    <header class="header container">
+        <img src="img/avatar.png" alt="photo" class="header-photo">
+        <!-- /.header-photo -->
+        <div class="header-text">
+            <strong class="header-strong">Привет</strong>
+            <h1 class="header-heading"><span class="header-primary">Я фронтенд-разработчик и веб-дизайнер</span> <br>
+                Меня зовут Артем Исламов и я делаю сайты для людей и компаний</h1>
+            <div class="header-links">
+                <ul class="social-list">
+                    <li class="social-item"><a href="#" class="social-link"><img src="img/Icons/link.svg" alt=""
+                                class="social-logo"></a></li>
+                    <li class="social-item"><a href="#" class="social-link"><img src="img/Icons/twl.svg" alt=""
+                                class="social-logo"></a></li>
+                    <li class="social-item"><a href="#" class="social-link"><img src="img/Icons/github.svg" alt=""
+                                class="social-logo"></a></li>
+                    <li class="social-item"><a href="#" class="social-link"><img src="img/Icons/stackoverflow.svg"
+                                alt="" class="social-logo"></a></li>
+                    <li class="social-item"><a href="#" class="social-link"><img src="img/Icons/youtube.svg" alt=""
+                                class="social-logo"></a></li>
+                </ul>
+                <a href="#" class="dowloade" dowloade>
+                    <img src="img/cv-icon.svg" alt="icon" class="cv-downloade">
+                    <span class="cv-text">Скачать резюме</span>
+                </a>
+            </div>
+            <!-- /.header-links -->
+        </div>
+        <!-- /.header-tetx -->
 
-    <section>
+    </header>
+    <!-- /.header header -->
 
-    </section>
-    <footer>
 
-    </footer>
+
 
 </body>
 
