--- a/index.html
+++ b/index.html
@@ -65,6 +65,62 @@
 
     </header>
     <!-- /.header header -->
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="section-heading">Последние проекты</h2>
+            <div class="cards">
+                <div class="card">
+                    <img src="img/portfolio/image 1.jpg" alt="photo-portfolio" class="card-img">
+                    <div class="card-text-wraper">
+                        <h3 class="card-titile">Мобильное приложение</h3>
+                        <ul class="tags">
+                            <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+                            <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+                            <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+                            <li class="tags-item"><a href="#" class="tag">Git</a></li>
+                            <li class="tags-item"><a href="#" class="tag">Vitejs</a></li>
+                        </ul>
+                        <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                            deserunt mollit anim id est laborum.</p>
+                        <div class="card-buttons">
+
+                            <a href="#" class="card-button"><img class="card-button-icon" src="img/Icons/code.svg"
+                                    alt="code"><span class="card-button-text">Код</span></a>
+                            <a href="#" class="card-button"><img class="card-button-icon" src="img/Icons/demo.svg"
+                                    alt="demo"><span class="card-button-text">Демо</span></a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <img src="img/portfolio/image 2.jpg" alt="photo-portfolio" class="card-img">
+                    <div class="card-text-wraper">
+                        <h3 class="card-titile">Одностраничный промо-сайт</h3>
+                        <ul class="tags">
+                            <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+                            <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+
+                        </ul>
+                        <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                            deserunt mollit anim id est laborum.</p>
+                        <div class="card-buttons">
+
+                            <a href="#" class="card-button"><img class="card-button-icon" src="img/Icons/code.svg"
+                                    alt="code"><span class="card-button-text">Код</span></a>
+                            <a href="#" class="card-button"><img class="card-button-icon" src="img/Icons/demo.svg"
+                                    alt="demo"><span class="card-button-text">Демо</span></a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- /.cards -->
+
+
+            <!-- /.cards -->
+        </div>
+        <!-- /.container -->
+    </section>
 
 
 
