Добавлен раздел Девелопер

--- a/index.html
+++ b/index.html
@@ -117,10 +117,43 @@
             <!-- /.cards -->
 
 
-            <!-- /.cards -->
+
         </div>
         <!-- /.container -->
     </section>
+    <section class="developer container">
+        <img src="img/developer-photo.png" alt="developer photo" class="developer-photo">
+        <div class="developer-about">
+            <span class="developer-hello">Рад вас видеть</span>
+            <h2 class="developer-title">Я Артем Исламов</h2>
+            <p class="developer-text">Я разрабатываю сайты для людей и компаний. Делаю всё сам: составляю прототип,
+                дизайн-макет, пишу код.</p>
+            <span class="motto">Код, Дизайн, Обучение</span>
+            <p class="developer-text">Могу собрать страницу для вашей компании, даже если запускать её нужно уже завтра.
+                Из инструментов есть:
+                Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
+            <img src="img/signe.png" alt="signe" class="developer-signe">
+
+        </div>
+
+
+    </section>
+    <!-- /.developer  -->
+    <section class="skills container">
+        <h2 class="skills-title">Работаю с разными языками и инструментами</h2>
+        <ul class="tags">
+            <li class="tags-item"><a href="#" class="skills-tag tag">HTML</a></li>
+            <li class="tags-item"><a href="#" class="skills-tag tag">CSS</a></li>
+            <li class="tags-item"><a href="#" class="skills-tag tag">JavaScript</a></li>
+            <li class="tags-item"><a href="#" class="skills-tag tag">Wordpress</a></li>
+            <li class="tags-item"><a href="#" class="skills-tag tag">npm</a></li>
+            <li class="tags-item"><a href="#" class="skills-tag tag">Reactjs</a></li>
+            <li class="tags-item"><a href="#" class="skills-tag tag">Nextjs</a></li>
+            <li class="tags-item"><a href="#" class="skills-tag tag">UI Design</a></li>
+            <li class="tags-item"><a href="#" class="skills-tag tag">SASS</a></li>
+        </ul>
+    </section>
+    <!-- /.skills -->
 
 
 
