--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li class="social-item"><a href="#" class="social-link"><img src="img/Icons/youtube.svg" alt=""
                                 class="social-logo"></a></li>
                 </ul>
-                <a href="#" class="dowloade" dowloade>
+                <a href="#" class="dowloade" downloade>
                     <img src="img/cv-icon.svg" alt="icon" class="cv-downloade">
                     <span class="cv-text">Скачать резюме</span>
                 </a>
@@ -154,6 +154,35 @@
         </ul>
     </section>
     <!-- /.skills -->
+    <section class="feedback form-container">
+        <h2 class="feedback-title">Готов обсудить проект...</h2>
+        <form action="#" class="form">
+            <div class="input-group">
+                <label class="input-label" for="userName">Имя</label>
+                <input id="usernName" type="text" class="input">
+            </div>
+            <div class="input-group">
+                <label class="input-label" for="username">Email</label>
+                <input id="userEmail" type="text" class="input">
+            </div>
+            <div class="input-group">
+                <label class="input-label" for="userMessage">Имя</label>
+                <textarea id="userMessage" cols="30" rows="30" class="input textarea"></textarea>
+            </div>
+
+            <div class="button-group">
+                <button type="submit" class="submit-button">
+                    <img src="img/Icons/send.svg" alt="send-icon" class="cv-downloade">
+                    <span class="cv-text">Отправить</span>
+                </button>
+            </div>
+
+        </form>
+
+
+    </section>
+    <!-- /.feedback -->
+
 
 
 
