--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <img src="img/logo.svg" alt="logo">
         <nav class="navigation">
             <ul class="nav-list">
-                <li class="nav-item"><a href="#" class="nav-link active">Главная</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Обо мне</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
+                <li class="nav-item"><a href="#main" class="nav-link active">Главная</a></li>
+                <li class="nav-item"><a href="#portfolio" class="nav-link">Проекты</a></li>
+                <li class="nav-item"><a href="#developer" class="nav-link">Обо мне</a></li>
+                <li class="nav-item"><a href="#feedback" class="nav-link">Связаться</a></li>
             </ul>
         </nav>
     </div>
     <!-- /.navbar -->
-    <header class="header container">
+    <header class="header container" id="main">
         <img src="img/avatar.png" alt="photo" class="header-photo">
         <!-- /.header-photo -->
         <div class="header-text">
@@ -54,7 +54,7 @@
                     <li class="social-item"><a href="#" class="social-link"><img src="img/Icons/youtube.svg" alt=""
                                 class="social-logo"></a></li>
                 </ul>
-                <a href="#" class="dowloade" downloade>
+                <a href="Даринская Анна (2).pdf" class="dowloade" downloade>
                     <img src="img/cv-icon.svg" alt="icon" class="cv-downloade">
                     <span class="cv-text">Скачать резюме</span>
                 </a>
@@ -65,7 +65,7 @@
 
     </header>
     <!-- /.header header -->
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="section-heading">Последние проекты</h2>
             <div class="cards">
@@ -121,7 +121,7 @@
         </div>
         <!-- /.container -->
     </section>
-    <section class="developer container">
+    <section class="developer container" id="developer">
         <img src="img/developer-photo.png" alt="developer photo" class="developer-photo">
         <div class="developer-about">
             <span class="developer-hello">Рад вас видеть</span>
@@ -139,7 +139,7 @@
 
     </section>
     <!-- /.developer  -->
-    <section class="skills container">
+    <section class="skills container" id="skills">
         <h2 class="skills-title">Работаю с разными языками и инструментами</h2>
         <ul class="tags">
             <li class="tags-item"><a href="#" class="skills-tag tag">HTML</a></li>
@@ -154,30 +154,33 @@
         </ul>
     </section>
     <!-- /.skills -->
-    <section class="feedback form-container">
-        <h2 class="feedback-title">Готов обсудить проект...</h2>
-        <form action="#" class="form">
-            <div class="input-group">
-                <label class="input-label" for="userName">Имя</label>
-                <input id="usernName" type="text" class="input">
-            </div>
-            <div class="input-group">
-                <label class="input-label" for="username">Email</label>
-                <input id="userEmail" type="text" class="input">
-            </div>
-            <div class="input-group">
-                <label class="input-label" for="userMessage">Имя</label>
-                <textarea id="userMessage" cols="30" rows="30" class="input textarea"></textarea>
-            </div>
+    <section class="feedback " id="feedback ">
+        <img src="img/hend.png" alt="hend" class="feedback-hend">
+        <div class="form-container">
+            <h2 class="feedback-title">Готов обсудить проект...</h2>
+            <form action="#" class="form">
+                <div class="input-group">
+                    <label class="input-label" for="userName">Имя</label>
+                    <input id="usernName" type="text" class="input">
+                </div>
+                <div class="input-group">
+                    <label class="input-label" for="username">Email</label>
+                    <input id="userEmail" type="text" class="input">
+                </div>
+                <div class="input-group">
+                    <label class="input-label" for="userMessage">Имя</label>
+                    <textarea id="userMessage" cols="30" rows="30" class="input textarea"></textarea>
+                </div>
 
-            <div class="button-group">
-                <button type="submit" class="submit-button">
-                    <img src="img/Icons/send.svg" alt="send-icon" class="cv-downloade">
-                    <span class="cv-text">Отправить</span>
-                </button>
-            </div>
+                <div class="button-group">
+                    <button type="submit" class="submit-button">
+                        <img src="img/Icons/send.svg" alt="send-icon" class="cv-downloade">
+                        <span class="cv-text">Отправить</span>
+                    </button>
+                </div>
 
-        </form>
+            </form>
+        </div>
 
 
     </section>
