--- a/index.html
+++ b/index.html
@@ -161,15 +161,16 @@
             <form action="#" class="form">
                 <div class="input-group">
                     <label class="input-label" for="userName">Имя</label>
-                    <input id="usernName" type="text" class="input">
+                    <input id="usernName" name="client_name" type="text" class="input">
                 </div>
                 <div class="input-group">
                     <label class="input-label" for="username">Email</label>
-                    <input id="userEmail" type="text" class="input">
+                    <input id="userEmail" name="client_email" type="text" class="input">
                 </div>
                 <div class="input-group">
                     <label class="input-label" for="userMessage">Имя</label>
-                    <textarea id="userMessage" cols="30" rows="30" class="input textarea"></textarea>
+                    <textarea id="userMessage" name="client_message" cols="30" rows="30"
+                        class="input textarea"></textarea>
                 </div>
 
                 <div class="button-group">
@@ -189,7 +190,7 @@
 
 
 
-
+    <script src="js/main.js"></script>
 </body>
 
 </html>
